chore: reduzir tamanho da imagem docker